fix photo edit itinerary and show page desc overflow

--- a/frontend/src/components/ItineraryShow/ItineraryShow.css
+++ b/frontend/src/components/ItineraryShow/ItineraryShow.css
@@ -1,19 +1,26 @@
 .itinerary-show-page {
-    padding-top: 7vh;
+    padding-top: 6.8vh;
 }
 
 .itinerary-show-header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 20vh;
+    height: 32.5vh;
 }
 
 #itinerary-show-image-container img {
     object-fit: cover;
-    height: 20vh;
+    height: 25vh;
     width: 50vw;
     object-position: 25% 75%;
+}
+
+.it-desc {
+    overflow: scroll;
+    width: 310px;
+    height: 70px;
+    line-height: 1.3;
 }
 
 .itinerary-show-description {
@@ -83,7 +90,7 @@
     border-radius: 15px;
     padding: 10px;
     outline-offset: -10px;
-    box-shadow: 0 0 0 3px rgba(213, 227, 203, 0.706);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, .1), 0 2px 4px rgba(0, 0, 0, .1);
 }
 
 .itinerary-header-text-box-description {
@@ -129,21 +136,25 @@
     align-items: center;
 }
 
+.delete-container {
+    display: flex;
+}
+
 #delete-itinerary-button, #cancel-button {
     border: none;
-    background-color: white;
-    color: rgb(210, 105, 122);
-    border: 2px dotted pink;
-    width: 5vw;
+    background-color: pink;
+    color: white;
+    width: 7vw;
     height: 3vw;
+    margin: 5px 5px 0 5px;
     border-radius: 100px;
     font-size: 15px;
     cursor: pointer;
 }
 
 #delete-itinerary-button:hover, #cancel-button:hover {
-    background-color: pink;
-    color: white;
+    background-color:  rgb(255, 230, 234);
+    color: rgb(210, 105, 122);
 
 }
 
@@ -159,6 +170,7 @@
 }
 
 .confirm-delete-itinerary-modal h1 {
+    margin: 0 20px 0 20px;
     font-size: 20px;
 }
 
